tests/contract_testcases/fluentbase/primitives/address_04.sol
contract test {
            address foo = address"5GBWmgdFAMqm8ZgAHGobqDqX6tjLxJhv53ygjNtaaAn3sjZZ";
        }
// ---- Expect: diagnostics ----
// error: 2:27-84: address literal 5GBWmgdFAMqm8ZgAHGobqDqX6tjLxJhv53ygjNtaaAn3sjZZ incorrect length of 35
